classDiagram
    direction BT
    class AbstractDAO {
        # obtenerXMLStreamWriter() XMLStreamWriter
        + load() boolean
        ~ obtenerLogger() void
        - cerrarArchivo(XMLStreamWriter) void
        + save() boolean
        - cerrarArchivo(XMLEventReader) void
        # guardarArchivo(XMLStreamWriter) void
        # cargarArchivo(XMLEventReader) void
        # obtenerXmlEventReader() XMLEventReader
        ~ getNextXmlEvent(XMLEventReader) XMLEvent
    }
    class DAOCirculacion {
        - _procesarPrecioPorAsiento(XMLEventReader) BigDecimal
        # cargarArchivo(XMLEventReader) void
        ~ __dbg_circulaciones() List~Circulacion~
        - _procesarRuta(XMLEventReader, StringBuffer, StringBuffer) void
        - _comprobarDentroDeHora(XMLEvent) boolean
        - _crearFechaHoraYcomprobarValidez(XMLEvent, int, int, int, int, int) LocalDateTime
        + main(String[]) void
        - _gestionarDatosEntrantesFecha(XMLEventReader, XMLEvent, int[]) void
        - _gestionarYCrearLaHora(XMLEventReader, int[]) LocalDateTime
        - _procesarCirculacion(XMLEventReader) void
        - _procesarRuta(XMLEventReader) Ruta
        - comprobarParametrosDeFechaSonMayoresQueCero(int, int, int, int, int) boolean
        - _comprobarYBuscarRuta(String, String) Ruta?
        # obtenerXMLStreamWriter() XMLStreamWriter?
        # obtenerXmlEventReader() XMLEventReader?
        - _crearEinsertarCirculacion(String, UUID, Ruta, EnumCirculacion, LocalDateTime, LocalDateTime, BigDecimal) void
        + obtenerCirculacionesRutaEnFecha(Ruta, LocalDate) List~Circulacion~
        ~ circulaciones() Map~Ruta, List~ Circulacion~~
        # guardarArchivo(XMLStreamWriter) void
        - _procesarTren(XMLEventReader, String) String
        - _procesarUuid(XMLEventReader) UUID
        + getInstance(FachadaDAO) DAOCirculacion
        - _procesarEstado(XMLEventReader, EnumCirculacion) EnumCirculacion
    }
    class DAOEstacion {
        - DAOEstacion instance
        + buscaEstacionPorNombre(String) Estacion
        # obtenerXmlEventReader() XMLEventReader
        # guardarArchivo(XMLStreamWriter) void
        + main(String[]) void
        ~ estaciones() List~Estacion~
        # cargarArchivo(XMLEventReader) void
        # obtenerXMLStreamWriter() XMLStreamWriter
        - addEstacion(Estacion) void
        DAOEstacion instance
    }
    class DAORuta {
        - Map~Estacion, Map~ Estacion, Ruta~~ rutas
        # obtenerXmlEventReader() XMLEventReader?
        - addRutaDesdeComponentes(String, String, int) void
        + buscarRutaPorNombres(String, String) Ruta
        + getInstance(FachadaDAO) DAORuta
        # obtenerXMLStreamWriter() XMLStreamWriter?
        + main(String[]) void
        # guardarArchivo(XMLStreamWriter) void
        # cargarArchivo(XMLEventReader) void
        + confirmarEnlace(String, String) boolean
        Map~Estacion, Map~ Estacion, Ruta~~ rutas
    }
    class DAOTren {
        - List~Tren~ trenes
        - DAOTren instance
        ~ addTren(Tren) void
        # cargarArchivo(XMLEventReader) void
        + localizarTren(String) Tren?
        + deleteTren(Tren) void
        # obtenerXMLStreamWriter() XMLStreamWriter?
        + updateTren(Tren) void
        # obtenerXmlEventReader() XMLEventReader
        + main(String[]) void
        # guardarArchivo(XMLStreamWriter) void
        DAOTren instance
        List~Tren~ trenes
    }
    class DAOUsuario {
        - DAOUsuario instance
        + addUser(Usuario) void
        + autenticar(String, String) boolean
        # obtenerXmlEventReader() XMLEventReader
        # cargarArchivo(XMLEventReader) void
        + actualizarUsuario(String, Usuario) void
        - comprobarHayUsuariosEnOrigen() boolean
        + main(String[]) void
        + encontrarUsuarioPorEmail(String) Usuario
        # obtenerXMLStreamWriter() XMLStreamWriter
        # guardarArchivo(XMLStreamWriter) void
        - usuarios() Collection~Usuario~
        DAOUsuario instance
    }
    class FachadaDAO {
        - FachadaDAO instance
        + obtenerCirculacionesRutaEnFecha(Ruta, LocalDate) List~Circulacion~
        + localizarTren(String) Tren
        + autenticar(String, String) boolean
        + buscaEstacionPorNombre(String) Estacion
        + addUser(Usuario) void
        + encontrarUsuarioPorEmail(String) Usuario
        + buscarRutaPorNombres(String, String) Ruta
        + guardarTrenes() void
        + __dbg_obtenerTodasLasCirculaciones() List~Circulacion~
        + existeRuta(String, String) boolean
        + actualizarUsuario(String, Usuario) void
        + guardarUsuarios() void
        + loadUsers() void
        + updateTren(Tren) void
        + addTren(Tren) void
        + cargaloTodo() void
        + deleteTren(Tren) void
        + saveUsers() void
        + loadTren() void
        + saveTren() void
        FachadaDAO instance
        List~Estacion~ estaciones
    }
    class IDAO {
        <<Interface>>
        + save() boolean
        + load(File) Boolean
        + save(File) Boolean
        + save(String) Boolean
        + load(String) Boolean
        + load() boolean
    }

    AbstractDAO ..> IDAO
    DAOCirculacion --> AbstractDAO
    DAOCirculacion "1" *--> "fa_dao 1" FachadaDAO
    DAOEstacion --> AbstractDAO
    DAORuta --> AbstractDAO
    DAORuta "1" *--> "fadao 1" FachadaDAO
    DAOTren --> AbstractDAO
    DAOUsuario --> AbstractDAO
    FachadaDAO "1" *--> "daoCirculacion 1" DAOCirculacion
    FachadaDAO "1" *--> "daoEstacion 1" DAOEstacion
    FachadaDAO "1" *--> "daoRuta 1" DAORuta
    FachadaDAO "1" *--> "daoTren 1" DAOTren
    FachadaDAO "1" *--> "daoUsuario 1" DAOUsuario
